--- a/BlazorApp1/Shared/NavMenu.razor
+++ b/BlazorApp1/Shared/NavMenu.razor
@@ -27,7 +27,37 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Admin users
             </NavLink>
         </li>
-    </ul>
+
+        <li class="nav-item dropdown show">
+            <NavLink class="nav-link dropdown-toggle" @onclick="() => expandSubNavSettings = !expandSubNavSettings" id="navbarDropdown">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Menu III
+            </NavLink>
+            @if (expandSubNavSettings)
+            {
+            <li class="dropdown-menu show" aria-labelledby="navbarDropdown" @onclick="() => expandSubNavSettings = !expandSubNavSettings">
+            
+            <li class="nav-item">
+                <NavLink class="nav-link text-dark" href="fetchdata">
+                    <span class="oi oi-fork" aria-hidden="true"></span> Fetch
+                </NavLink>
+            </li>
+
+            <li class="nav-item">
+                <NavLink class="nav-link text-dark" href="counter">
+                    <span class="oi oi-command" aria-hidden="true"></span> Counter
+                </NavLink>
+            </li>
+
+            <li class="nav-item">
+                <NavLink class="nav-link text-dark" href="home">
+                    <span class="oi oi-home" aria-hidden="true"></span> Home
+                </NavLink>
+            </li>
+
+            </li>
+        }
+            </li>
+        </ul>
 </div>
 
 @code {
@@ -35,8 +65,24 @@
 
     private string NavMenuCssClass => collapseNavMenu ? "collapse" : null;
 
+    private bool expandSubNav;
+
+    private bool expandSubNavSettings;
+
+    string baseMenuClass = "navbar-collapse d-sm-inline-flex flex-sm-row-reverse";
+
     private void ToggleNavMenu()
     {
         collapseNavMenu = !collapseNavMenu;
     }
+}
+
+@if (expandSubNav)
+{
+    <NavLink class="expand-menu" href="">
+        <span>Sub1</span>
+    </NavLink>
+    <NavLink class="" href="">
+        <span>Sub2</span>
+    </NavLink>
 }
